# courteousCode

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.test/: README.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/blackbox-schedule/: SKILL.md
src-tauri/resources/blackbox-schedule/agents/: openai.yaml
src-tauri/resources/blackbox-schedule/scripts/: automation_cli.py
src-tauri/resources/en.lproj/: InfoPlist.strings
src-tauri/resources/experimental/: managed-provider-v1.sql  memory-operator-v1.sql  memory-promotion-v1.sql  memory-recovery-v1.sql  memory-v3.sql  petpack-v1.schema.json  rag-consent-v1.sql  runtime-journal-v1.sql
src-tauri/resources/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: automations.rs  auxiliary_model_hook.rs  desktop_pet.rs  experimental_foundation.rs  experimental_managed_provider.rs  experimental_memory_operator.rs  experimental_memory_promotion.rs  experimental_memory_recovery.rs  experimental_petpack.rs  experimental_rag.rs  experimental_sqlite_attestation.rs  lib.rs  main.rs  mcp_manager.rs  path_access.rs  plan_mcp.rs  plugin_manager.rs  protocol.rs  provider_catalog.rs  provider_credentials.rs  provider_gateway.rs  provider_protocol.rs  session_metadata.rs  task_handoff.rs  time_context_hook.rs  web_retrieval_mcp.rs  windows_ps.rs  workflow_manager.rs
src-tauri/src/commands/: claude_process.rs  cli_resolver.rs  mod.rs
(+318 files in other folders)
