[package]
name = "blackbox"
version = "0.14.11"
description = "Black Box - A beautiful GUI for Claude Code"
authors = ["TinyZ"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "blackbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
notify = "7"
base64 = "0.22"
serde_yaml = "0.9"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
axum = "0.8"
async-stream = "0.3"
futures-util = "0.3"
rand = "0.8"
trash = "5"
flate2 = "1"
tar = "0.4"
zip = "2"
sha2 = "0.10"
hmac = "0.12"
png = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
toml = "0.8"
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp" }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa = "0.26"
objc = "0.2"
security-framework = "3.7"
